--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <button id="searchbutton" onclick="search()">Search</button>
     <hr />
     <div id="main"></div>
+    <div id="footer"></div>
 </body>
 
 </html>
